network_policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  
spec:
  podSelector:
    matchLabels:
      role: db
      
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: api-server
          
    ports:
    - protocol: TCP
      port: 5432
